--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">SocialMediaApp</string>
     <string name="title_activity_user_profile">UserProfileActivity</string>
+    <string name="title_activity_home_feed">HomeFeedActivity</string>
+    <string name="title_activity_splash">SplashActivity</string>
 </resources>
